fixing spacing issue

--- a/scss/_utilities.scss
+++ b/scss/_utilities.scss
@@ -173,6 +173,7 @@
 }
 
 .description {
+  height: 50%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
